--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,53 +18,21 @@
         <h4 class="myfont">shopping list made easier by keeping track of your household inventory </h4>
         
         <div class="col-8 custom-margins">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img th:src="@{/images/image1.jpg}" class="d-block w-100" >
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{/images/image2.jpg}" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{/images/image3.jpg}" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{/images/image4.jpg}" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{/images/image5.jpg}" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{/images/image6.jpg}" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img th:src="@{/images/image7.jpg}" class="d-block w-100">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+          <div th:insert="@{/fragments/carousel.html}"></div>
         </div>
         <div id="form1" class="col-4 text-center bg-warning custom-margins">
-            <form method="post" th:action="@{/user_login}" th:object="${isUserAvailable}"
+            <form method="post" th:action="@{/user_login}"
             class="d-inline-block align-items-center justify-content-center mt-5">
               <h6>Please login to your account</h6>
               <div class="form-outline mt-4 mb-2">
                 <input type="email" id="uemail" name="email" class="form-control"
-                  placeholder="Email address" pattern = "^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$" 
-                  title="please provide email in correct format as name@mail.com" required/>
+                  placeholder="Email address" pattern = "^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$"
+                  title="Please provide email in correct format as name@mail.com" required/>
                 <label class="form-label" for="uemail"></label>
               </div>
 
               <div class="form-outline mb-2">
-                <input type="password" id="upassword" name="password" class="form-control" placeholder="password" required/>
+                <input type="password" id="upassword" name="password" class="form-control" placeholder="password" title="Password should be 8 characters long and must contain 1 lowercase, 1 uppercase, 1digit and 1 special character" required/>
                 <label class="form-label" for="upassword"></label>
               </div>
 
@@ -72,7 +40,10 @@
                 <button class="btn btn-dark btn-block mb-3 me-3" type="submit">Log
                   in</button>
               </div>
-              <p th:text="${notExist}"></p>
+              <div class="d-flex align-items-center justify-content-center pt-1 mb-4 pb-1">
+                  <h6 th:text="${notExist}"></h6>
+              </div>
+
               <div class="d-flex align-items-center justify-content-center pb-4">
                 <p class="mb-0 me-2">Don't have an account?</p>
                 <button id="signup" type="button" class="btn btn-dark text-white" 
@@ -85,7 +56,7 @@
               <h6>Please create your account</h6>
               <div class="form-outline mt-4 mb-1">
                 <input type="text" id="name" name="name" class="form-control"
-                  placeholder="Full Name" pattern="^[a-zA-Z ]+" minlength="3" maxlength="25" title="invalid input" required/>
+                  placeholder="Full Name" pattern="^[a-zA-Z ]+" minlength="3" maxlength="25" title="Valid name must contain only letters" required/>
                 <label class="form-label" for="name"></label>
               </div>
 
@@ -96,12 +67,13 @@
               </div>
 
               <div class="form-outline mb-1">
-                <input type="password" id="password" class="form-control" placeholder="password" required/>
+                <input type="password" id="password" class="form-control" placeholder="password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@$!%*?&])([a-zA-Z0-9@$!%*?&]{8,})$" title="Password should be 8 characters long and must contain 1 lowercase, 1 uppercase, 1digit and 1 special character"
+                required/>
                 <label class="form-label" for="password"></label>
               </div>
 
               <div class="form-outline mb-1">
-                <input type="password" id="confirmP" name="password" class="form-control" placeholder=" confirm password" required/>
+                <input type="password" id="confirmP" name="password" class="form-control" placeholder=" confirm password" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@$!%*?&])([a-zA-Z0-9@$!%*?&]{8,})$" title="Password should be 8 characters long and must contain 1 lowercase, 1 uppercase, 1digit and 1 special character" required/>
                 <label class="form-label" for="confirmP"></label>
               </div>
 
@@ -127,6 +99,19 @@ function toggle(str1,str2){
   document.getElementById(str2).style.display = 'inline';
 }
 
+var password = document.getElementById("password");
+var confirm_password = document.getElementById("confirmP");
+
+function validatePassword(){
+  if(password.value != confirm_password.value) {
+    confirm_password.setCustomValidity("Passwords Don't Match");
+  } else {
+    confirm_password.setCustomValidity('');
+  }
+}
+
+password.onchange = validatePassword;
+confirm_password.onkeyup = validatePassword;
 </script>
 </body>
 </html>
