--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         <h4 class="myfont">shopping list made easier by keeping track of your household inventory </h4>
         
         <div class="col-8 custom-margins">
-          <div th:insert="@{/fragments/carousel.html}"></div>
+          <div th:insert="~{/fragments/carousel.html}"></div>
         </div>
         <div id="form1" class="col-4 text-center bg-warning custom-margins">
             <form method="post" th:action="@{/user_login}"
