Error page and Exception Handling

--- a/src/main/resources/templates/actions.html
+++ b/src/main/resources/templates/actions.html
@@ -33,19 +33,19 @@
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
             
-            <a href="https://www.google.com/" class="text-decoration-none text-dark" target="_parent"><h5 class="card-text">Update</h5></a>
+            <a href="https://www.google.com/" class="text-decoration-none text-dark" target="_parent"><h5 class="card-text">Update/Delete</h5></a>
         </div>
     </div>  
     <!-- <div class="col-1"></div> -->
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
-            <h5 class="card-text">View</h5>
+            <a th:href="@{/action/view/}+${userId}" target="_parent" ><h5 class="card-text">View</h5></a>
         </div>
     </div>  
     <!-- <div class="col-1"></div> -->
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
-            <h5 class="card-text">Delete</h5>
+            <h5 class="card-text">Shopping List</h5>
         </div>
     </div>  
     <div class="col-1"></div>
