--- a/src/main/resources/templates/addItems.html
+++ b/src/main/resources/templates/addItems.html
@@ -18,15 +18,16 @@
         </div>
     </header>
 
-    <div class="row pad mt-4 text-center">
+    <div class="row mt-4 pb-3 text-center">
         <div class="col-3 text-center bg-warning custom-margins">
-            <div th:each="cat: ${category}" class="mt-3 mb-3">
+            <div id="buttons" th:each="cat: ${category}" class="mt-3 mb-3">
                 <button th:id= ${cat.cid} type="button" class="btn btn-dark text-white"
-                onclick=showInputForm(this.id) th:text="${cat.categoryName}+${cat.cid}"></button>
+                onclick=showInputForm(this.id) th:text="${cat.categoryName}"></button>
                 <br>
             </div>
         </div>
-        <div  id="itemInputForm" class="col-8 text-center mt-4 custom-margins">
+        <div  id="itemInputForm" class="col-8 text-center mt-4 pt-4 custom-margins">
+            <div id="CategoryTitle" class="text-center bg-warning custom-margins fw-bold"></div>
             <form id="form" method="post" th:action="@{/action/additem/}+${userId}" th:object="${newItem}">
                 <input id="itemName" name="itemName" type="text">
                 <input id="quantity" name="quantity"type="number" min="0" max="100">
@@ -41,21 +42,37 @@
                     <option>box</option>
                 </select>
                 <button type="submit">Submit</button>
-                <p th:text="${msg}"></p>
             </form>
-         
         </div>
     </div>
-    
+    <div class="row text-center bg-warning mb-3" >
+        <div class="col-3"></div>
+        <div class="col-6 mt-3">
+            <table class="table table-hover table-dark table-striped table-sm ">
+                <thead>
+                    <tr class="fw-bold">
+                        <td>Items List with Category Name</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="m: ${msg}">
+                        <td th:text="${m}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col3"></div>
+    </div>
 </div>
 
 <script>
-function showInputForm(id){
+
+function showInputForm(id, categoryName){
     document.getElementById("itemInputForm").style.display = 'inline';
     let button = document.getElementById(id);
     button.setAttribute("class","btn btn-success text-white");
     let form= document.getElementById("form");
-    let path = form.getAttribute("action");
+    path = form.getAttribute("action");
     path += "/"+id;
     form.setAttribute("action",path);
 }
