View item query

--- a/src/main/resources/templates/actions.html
+++ b/src/main/resources/templates/actions.html
@@ -26,7 +26,7 @@
     <div class="col-1"></div>    
     <div class="col-2 card text-center bg-warning ms-3 mb-3 me-5">
         <div class="card-body">
-            <a th:href="@{/action/add/}+${userId}" target="_parent" ><h5 class="card-text">Add/Create</h5></a>
+            <a th:href="@{/action/add/}+${userId}" target="_parent" ><h5 class="card-text text-decoration-none text-dark">Add/Create</h5></a>
         </div>
     </div>    
     <!-- <div class="col-1"></div> -->
@@ -39,13 +39,13 @@
     <!-- <div class="col-1"></div> -->
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
-            <a th:href="@{/action/view/}+${userId}" target="_parent" ><h5 class="card-text">View</h5></a>
+            <a th:href="@{/action/view/}+${userId}" target="_parent" ><h5 class="card-text text-decoration-none text-dark">View</h5></a>
         </div>
     </div>  
     <!-- <div class="col-1"></div> -->
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
-            <h5 class="card-text">Shopping List</h5>
+            <h5 class="card-text text-decoration-none text-dark">Shopping List</h5>
         </div>
     </div>  
     <div class="col-1"></div>
