--- a/src/main/resources/templates/viewItems.html
+++ b/src/main/resources/templates/viewItems.html
@@ -21,8 +21,8 @@
     <div class="row mt-4 pb-3 text-center">
         <div class="col-3 text-center bg-warning custom-margins">
             <div id="buttons" th:each="cat: ${category}" class="mt-3 mb-3">
-                <form >
-                <button th:id= ${cat.cid} type="button" class="btn btn-dark text-white"
+                <form method="post"  th:action="@{/action/additem/}+${userId}">
+                <button th:id= ${cat.cid} type="submit" class="btn btn-dark text-white"
                 th:text="${cat.categoryName}"></button>
                 <br>
                 </form>
