--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,26 +92,26 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script>
+<script th:src="@{/javascript/script.js}">
 
-function toggle(str1,str2){
-  document.getElementById(str1).style.display = 'none';
-  document.getElementById(str2).style.display = 'inline';
-}
+// function toggle(str1,str2){
+//   document.getElementById(str1).style.display = 'none';
+//   document.getElementById(str2).style.display = 'inline';
+// }
 
-var password = document.getElementById("password");
-var confirm_password = document.getElementById("confirmP");
+// var password = document.getElementById("password");
+// var confirm_password = document.getElementById("confirmP");
 
-function validatePassword(){
-  if(password.value != confirm_password.value) {
-    confirm_password.setCustomValidity("Passwords Don't Match");
-  } else {
-    confirm_password.setCustomValidity('');
-  }
-}
+// function validatePassword(){
+//   if(password.value != confirm_password.value) {
+//     confirm_password.setCustomValidity("Passwords Don't Match");
+//   } else {
+//     confirm_password.setCustomValidity('');
+//   }
+// }
 
-password.onchange = validatePassword;
-confirm_password.onkeyup = validatePassword;
+// password.onchange = validatePassword;
+// confirm_password.onkeyup = validatePassword;
 </script>
 </body>
 </html>
