--- a/src/main/resources/templates/viewItems.html
+++ b/src/main/resources/templates/viewItems.html
@@ -19,23 +19,51 @@
     </header>
 
     <div class="row mt-4 pb-3 text-center">
-        <div class="col-3 text-center bg-warning custom-margins">
-            <div id="buttons" th:each="cat: ${category}" class="mt-3 mb-3">
-                <form method="post"  th:action="@{/action/additem/}+${userId}">
-                <button th:id= ${cat.cid} type="submit" class="btn btn-dark text-white"
-                th:text="${cat.categoryName}"></button>
-                <br>
-                </form>
+        <div class="col-3 text-center bg-warning custom-margins " >
+            <div class="mt-3 mb-3" th:each="cat: ${category}">
+            <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
+                <div class="card-body">
+                    <a class="text-decoration-none"  th:href="@{/action/view/{userId}/{cid} (userId=${userId}, cid=${cat.cid})}" target="_parent">
+                        <h5 class="card-text text-white" th:text="${cat.categoryName}"></h5>
+                    </a>
+                </div>
+            </div>
             </div>
         </div>
-        <div  id="viewItems" class="col-8 text-center mt-4 pt-4 custom-margins">
-            <div id="CategoryTitle" class="text-center bg-warning custom-margins fw-bold"></div>
-            
+        <div  id="viewItems" class="col-8 text-center custom-margins">
+            <div id="CategoryTitle" class="text-center bg-warning fw-bold" >
+                <h5 th:if="${cName}" th:text="${cName}"></h5>
+            </div>
+            <table class="table table-hover table-dark table-striped table-sm ">
+                <thead>
+                    <tr class="fw-bold">
+                        <td>Item Name</td>
+                        <td>Quantity</td>
+                        <td>Measuring Unit</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:if="${Items}" th:each="item: ${Items}">
+                        <td th:text="${item.itemName}"></td>
+                        <td th:text="${item.quantity}"></td>
+                        <td th:text="${item.measuringUnit}"></td>
+                    </tr>
+                </tbody>
+            </table>    
         </div>
     </div>
+    <div class="row m-auto text-center">
+        <div class="col-5"></div>
+        <div class="col-2 card text-center bg-warning">
+            <div class="card-body">
+                <h5 class="card-text" onclick="goback()">Go Back</h5>
+            </div>
+        </div>    
+        <div class="col-5"></div>
+    </div> 
 </div>
 
-<script>
+<script th:src="@{/javascript/script.js}">
 
 </script>
 </body>
