package name changed

--- a/src/main/resources/templates/addItems.html
+++ b/src/main/resources/templates/addItems.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="row mt-4 pb-3 text-center">
-        <div id="categoryList" class="col-3 text-center bg-warning custom-margins " >
+        <div class="col-3 text-center bg-warning custom-margins " >
             <div class="mt-3 mb-3" th:each="cat: ${category}">
             <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
                 <div class="card-body">
@@ -29,12 +29,13 @@
             </div>
         </div>
         <!-- <div class="col-3 text-center bg-warning custom-margins">
-            <div id="buttons" th:each="cat: ${category}" class="mt-3 mb-3">
-                <button th:id= ${cat.cid} type="button" class="btn btn-dark text-white"
-                onclick=showInputForm(this.id) th:text="${cat.categoryName}"></button>
+            <div th:each="cat: ${category}" class="mt-3 mb-3">
+                <button th:id= ${cat.cid} onclick=showInputForm(this.id) type="button" class="btn btn-dark text-white myBtn"
+                 th:text="${cat.categoryName}"></button>
                 <br>
             </div>
         </div> -->
+        
         <div  id="itemInputForm" class="col-8 text-center mt-4 pt-4 custom-margins">
             <div id="CategoryTitle" class="text-center bg-warning custom-margins fw-bold"></div>
             <form id="form" method="post" th:action="@{/action/additem/}+${userId}" th:object="${newItem}">
