--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
               </div>
 
               <div class="form-outline mb-2">
-                <input type="password" id="upassword" name="password" class="form-control" placeholder="password" title="Password should be 8 characters long and must contain 1 lowercase, 1 uppercase, 1digit and 1 special character" required/>
+                <input type="password" id="upassword" name="password" class="form-control" placeholder="password" required/>
                 <label class="form-label" for="upassword"></label>
               </div>
 
