--- a/src/main/resources/templates/actions.html
+++ b/src/main/resources/templates/actions.html
@@ -33,7 +33,7 @@
     <div class="col-2 card text-center bg-warning mb-3 me-5">
         <div class="card-body">
             
-            <a href="https://www.google.com/" class="text-decoration-none text-dark" target="_parent"><h5 class="card-text">Update/Delete</h5></a>
+            <a th:href="@{/action/edit/}+${userId}" class="text-decoration-none text-dark" target="_parent"><h5 class="card-text">Update/Delete</h5></a>
         </div>
     </div>  
     <!-- <div class="col-1"></div> -->
