--- a/src/main/resources/templates/add_items.html
+++ b/src/main/resources/templates/add_items.html
@@ -14,7 +14,7 @@
         <div class="col-3"><img src="/images/easyLifeLogo.png" height="100px" ></div>
         <div class="col-8"></div>
         <div class="col-1 text-white d-flex align-items-center">
-            <h6 th:text="|Welcome, ${name}|"></h6>
+            <h6 th:text=${name}></h6>
         </div>
     </header>
 
@@ -75,13 +75,13 @@
     <div class="row text-center bg-warning mb-3">
         <div class="col-3"></div>
         <div class="col-6 mt-3">
-            <table class="table table-hover table-dark table-striped table-sm ">
-                <thead>
+            <table class="table table-hover table-striped table-sm ">
+                <thead class="bg-dark text-light">
                     <tr class="fw-bold">
                         <td>Items List with Category Name</td>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="bg-light">
                     <tr th:each="m: ${msg}">
                         <td th:text="${m}"></td>
                     </tr>
@@ -94,26 +94,13 @@
         <div class="col-5"></div>
         <div class="col-2 card text-center bg-warning">
             <div class="card-body">
-                <h5 class="card-text" onclick="goback()">Go Back</h5>
+                <h5 class="card-text" onclick=history.go(-1)>Go Back</h5>
             </div>
         </div>    
         <div class="col-5"></div>
     </div> 
 </div>
 
-<script th:src="@{/javascript/script.js}">
-
-// function showInputForm(id){
-//     let button = document.getElementById(id);
-//     document.getElementById("itemInputForm").style.display = 'inline';
-//     button.setAttribute("class","bg-success text-white");
-//     let form= document.getElementById("form");
-//     path = form.getAttribute("action");
-//     path += "/"+id;
-//     form.setAttribute("action",path);
-// }
-
-
-</script>
+<script th:src="@{/javascript/script.js}"></script>
 </body>
 </html>
