--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         <h4 class="myfont">shopping list made easier by keeping track of your household inventory </h4>
         
         <div class="col-8 custom-margins">
-          <div th:insert="~{/fragments/carousel.html}"></div>
+          <div th:insert="~{fragments/fragment.html :: carousel}"></div>
         </div>
         <div id="form1" class="col-4 text-center bg-warning custom-margins">
             <form method="post" th:action="@{/user_login}"
@@ -94,24 +94,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script th:src="@{/javascript/script.js}">
 
-// function toggle(str1,str2){
-//   document.getElementById(str1).style.display = 'none';
-//   document.getElementById(str2).style.display = 'inline';
-// }
-
-// var password = document.getElementById("password");
-// var confirm_password = document.getElementById("confirmP");
-
-// function validatePassword(){
-//   if(password.value != confirm_password.value) {
-//     confirm_password.setCustomValidity("Passwords Don't Match");
-//   } else {
-//     confirm_password.setCustomValidity('');
-//   }
-// }
-
-// password.onchange = validatePassword;
-// confirm_password.onkeyup = validatePassword;
 </script>
 </body>
 </html>
