--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,6 +17,7 @@
         <div class="col-3"></div>
         <div class="col-6 bg-warning">
             <h4>Something went wrong :( </h4>
+            <h4 th:if="${error}" th:text="${error}" class="text-danger text-wrap fw-bold"></h4>
             <h4>Please go back to Homepage</h4>
         </div>
         <div class="col-3"></div>
@@ -29,7 +30,7 @@
             </div>
         </div>    
         <div class="col-5"></div>
-    </div> 
-   
+    </div>
+</div>
 </body>
 </html>
