--- a/src/main/resources/templates/add_items.html
+++ b/src/main/resources/templates/add_items.html
@@ -10,13 +10,7 @@
 </head>
 <body>
 <div class="container-fluid mt-1">
-    <header class="row bg-dark">
-        <div class="col-3"><img src="/images/easyLifeLogo.png" height="100px" ></div>
-        <div class="col-8"></div>
-        <div class="col-1 text-white d-flex align-items-center">
-            <h6 th:text=${name}></h6>
-        </div>
-    </header>
+    <div th:replace="~{fragments/fragment.html :: header}"></div>
 
     <div class="row mt-4 pb-3 text-center">
         <div class="col-3 text-center bg-warning custom-margins " >
@@ -28,14 +22,7 @@
             </div>
             </div>
         </div>
-        <!-- <div class="col-3 text-center bg-warning custom-margins">
-            <div th:each="cat: ${category}" class="mt-3 mb-3">
-                <button th:id= ${cat.cid} onclick=showInputForm(this.id) type="button" class="btn btn-dark text-white myBtn"
-                 th:text="${cat.categoryName}"></button>
-                <br>
-            </div>
-        </div> -->
-        
+
         <div  id="itemInputForm" class="col-8 mt-4 pt-4 custom-margins">
             <div id="CategoryTitle" class="text-center bg-warning fw-bold"></div>
             <form id="form" method="post" th:action="@{/action/additem/}+${userId}" th:object="${newItem}">  
@@ -52,15 +39,18 @@
             <p class="mb-1 text-start fw-bold">Unit</p>
             <div class="form-outline w-25">    
                 <select id="measuringUnit" name="measuringUnit" class="form-control">
+                    <option>bottle</option>
                     <option>box</option>
                     <option>cans</option>
                     <option>count</option>
                     <option>gallon</option>
+                    <option>jar</option>
                     <option>lbs</option>
                     <option>liter</option>
                     <option>oz</option>
                     <option>pkt</option>
                     <option>quart</option>
+                    <option>qty</option>
                     <option>unit</option>
                 </select> 
                 <label class="form-label" for="measuringUnit"></label>
@@ -101,6 +91,6 @@
     </div> 
 </div>
 
-<script th:src="@{/javascript/script.js}"></script>
+<div th:replace="~{fragments/fragment.html :: foot}"></div>
 </body>
 </html>
