--- a/src/main/resources/templates/actions.html
+++ b/src/main/resources/templates/actions.html
@@ -10,14 +10,13 @@
 </head>
 <body>
 <div class="container-fluid mt-1">
-    <div th:replace="~{fragments/fragment.html :: header}"></div>
-    <!-- <header class="row bg-dark">
+    <header class="row bg-dark">
         <div class="col-3"><img src="/images/easyLifeLogo.png" height="100px" ></div>
         <div class="col-7"></div>
         <div class="col-2 text-white d-flex align-items-center">
             <div class="dropdown">
                 <button class="btn btn-warning dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" 
-                th:text="${userName}">
+                th:text="${name}">
                     Dropdown button
                   </button>
                   <div class="dropdown-menu" aria-labelledby="userMenu">
@@ -25,9 +24,8 @@
                   <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                 </div>
             </div>
-            
         </div>
-    </header> -->
+    </header>
     <div class="row mt-4 mb-2 text-center">
     <div class="col-3"></div>
     <div class="col-6"><h4 class="myfont">Please choose from the below options</h4></div>
