--- a/src/main/resources/templates/view_items.html
+++ b/src/main/resources/templates/view_items.html
@@ -4,14 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Items</title>
+    <title>View Items</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/mystyles.css}">
 </head>
 <body>
 <div class="container-fluid mt-1">
-    <div th:replace="~{fragments/fragment.html :: header}"></div>
+    <header class="row bg-dark">
+        <div class="col-3"><img src="/images/easyLifeLogo.png" height="100px" ></div>
+        <div class="col-7"></div>
+        <div class="col-2 text-white d-flex align-items-center">
+            <div class="dropdown">
+                <button class="btn btn-warning dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" 
+                th:text="${name}">
+                    Dropdown button
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="userMenu">
+                  <a class="dropdown-item" th:href="@{/admin/}+${userId}">Admin Page</a>
+                  <a class="dropdown-item" th:href="@{/action/add/}+${userId}">Add</a>
+                  <a class="dropdown-item" th:href="@{/action/edit/}+${userId}">Update</a>
+                  <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                </div>
+            </div>
+            
+        </div>
+    </header>
 
+    <div class="row  mt-4">
+        <div class="col-3"></div>
+        <div class="col-6 bg-warning fw-bold text-center pb-1 pt-1"><h4>View Items</h4></div>
+        <div class="col-3"></div>
+    </div>
     <div class="row mt-4 pb-3 text-center">
         <div class="col-3 text-center bg-warning custom-margins " >
             <div class="mt-3 mb-3" th:each="cat: ${category}">
@@ -23,6 +46,16 @@
                 </div>
             </div>
             </div>
+
+            <!-- <div class="mt-3 mb-3" th:each="cat: ${category}">
+                <div class="card text-center bg-black fw-bold ms-lg-4 me-lg-4">
+                    <div class="card-body">
+                        <a class="text-decoration-none"  th:href="@{/action/viewAll/{userId} (userId=${userId})}" target="_parent">
+                            <h5 class="card-text text-white">View All</h5>
+                        </a>
+                    </div>
+                </div>
+            </div> -->
         </div>
         <div  id="viewItems" class="col-8 text-center custom-margins">
             <div id="CategoryTitle" class="text-center bg-warning fw-bold" >
